--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,33 @@ body {
     width: 75%;
 }
 
+#textoInicial {
+    background-color: white;
+    border-radius: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 40px;
+    margin-top: 40px;
+}
 
+#textoInicial p {
+    font-family: "Google Sans", Roboto, Arial, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    color: #3c4043;
+}
+
+#textoInicial h1 {
+    font-family: "Google Sans", Roboto, Arial, sans-serif;
+    font-weight: 500;
+    color: #3c4043;
+}
+
+#btnsIniciais{
+    text-align: center;
+}
 
 
 
@@ -60,6 +86,7 @@ body {
     width: auto;
     will-change: transform, opacity;
     z-index: 0;
+    text-decoration: none;
 }
 
 .button-white:hover {
