--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     background: linear-gradient(45deg, rgb(192, 255, 208), rgb(6, 100, 29));
 }
 
-#container{
+#container {
     width: 75%;
 }
 
@@ -36,7 +36,7 @@ body {
     color: #3c4043;
 }
 
-#btnsIniciais{
+#btnsIniciais {
     text-align: center;
 }
 
@@ -122,4 +122,45 @@ body {
 
 .button-white:disabled {
     box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+
+
+
+
+/* Estilo do header da página principal */
+.parent {
+    margin: 1rem;
+    padding: 1rem 1rem;
+    text-align: center;
+}
+
+.child {
+    display: inline-block;
+    padding: 1rem 1rem;
+    vertical-align: middle;
+}
+
+
+
+
+
+
+
+/* Estilo de imagens */
+.icone {
+    width: 50px;
+    height: 50px;
+}
+
+.paraguaio{
+    border-radius: 25px;
+}
+
+
+
+@media (max-width: 1200px) {
+    img.paraguaio {
+        width: 100%;
+    }
 }
